Version 13

--Fixed a crash that occurred when the user mistakenly launched the v12 game
  application from the v11 folder (thanks Paciferal).

--Added empty vault sprite, and changed so that reaching an empty vault does
  not end the robbery (if owner has not edited house since last robbery).  This
  eliminates grinding that was possible through damage that was saved by
  reaching a vault repeatedly in a broken house.





Version 12   Live Server Fixes

--Added missing column to shadow table where dead owners' houses are held to
  prevent unexpected responses from server (thanks Gardner Marshall).

--Fixed a potential deadlock on duplicate newHouse calls when a user's house
  does not yet exist.

--Changed so that vault stops earning money after it is reached by robbers
  twice (until the next owner repair).





Version 12     2013-July-4

--Animals now only start moving after the player sees them, making it
  impossible for a never-visible animal to move around behind the walls and
  trigger things mysteriously (the animal now has to be seen at least once,
  perhaps through a window, before it can start doing this).





Version 11   Live Server Fixes

--A robber's backpack contents are now discarded upon leaving the target house
  or reaching the vault.  Backpack contents are only added to the vault when a
  robber dies in the house.  Experimenting with this as a solution to the
  multi-life tool dumping loophole.

--Wife retains her half of the money (and accumulates her own salary) even
  after a robbery that reaches the vault.  Previously, after a vault robbery,
  half of the money she held would be put in the vault.  This changes prevents
  someone from whittling away at house's money by reaching the vault over and
  over without finding the wife.

--No longer reports salary earnings to you that have already been stolen.






Version 11   2013-July-2

--Fixed bug in family death detection being delayed by a step, which resulted