@@ -97,6 +97,12 @@ graphics/diffHighlightsOn.tga \
 graphics/diffHighlightsOff.tga \
 graphics/checkMark.tga \
 graphics/checkMarkOff.tga \
+graphics/moveUp.tga \
+graphics/moveLeft.tga \
+graphics/moveDown.tga \
+graphics/moveRight.tga \
+graphics/safeMoveOn.tga \
+graphics/safeMoveOff.tga \
 
 
 
