@@ -1,4 +1,4 @@
-Version 13
+Version 13   2013-July-9
 
 --Fixed a crash that occurred when the user mistakenly launched the v12 game
   application from the v11 folder (thanks Paciferal).
@@ -7,6 +7,9 @@ Version 13
   not end the robbery (if owner has not edited house since last robbery).  This
   eliminates grinding that was possible through damage that was saved by
   reaching a vault repeatedly in a broken house.
+
+--Added toggle for safe movement mode (ENTER to confirm each move) for tense
+  moments (thanks TheMost).
 
 
 
